<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentContainer"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edittext"
        android:hint="@string/email"
        android:layout_below="@+id/imageViewLogo"
        android:textColorHint="#81000000"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edittext"
        android:hint="@string/password"
        android:textColorHint="#81000000"/>

    <Button
        android:id="@+id/buttonZaloguj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_activity_buttons"
        android:text="@string/buttonZaloguj"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextPassword"
        android:onClick="buttonZalogujOnClick"
        android:textColor="#000000"

        />

    <TextView
        android:id="@+id/textViewWithoutAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WithoutAccount"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonZaloguj"
        android:layout_marginTop="50dp"
        android:textColor="#FF0000"/>

    <Button
        android:id="@+id/buttonZarejestruj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonZarejestruj"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewWithoutAccount"
        android:textSize="30sp"
        android:background="@drawable/main_activity_buttons"
        android:onClick="buttonZarejestrujOnClick"
        android:textColor="#000000"/>
</RelativeLayout>
