<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageViewLogo"
        android:background="@drawable/login_edittext"
        android:hint="@string/email"
        android:textColorHint="#81000000"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextEmailRegister"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edittext"
        android:hint="@string/password"
        android:textColorHint="#81000000"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/buttonZarejestrujRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_activity_buttons"
        android:text="@string/buttonZarejestruj"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextPasswordRegister"
        android:gravity="center"
        android:textColor="#000000"
        android:onClick="buttonZarejestrujRegistryOnClick"
        />
    <Button
        android:id="@+id/buttonPowrot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_activity_buttons"
        android:text="@string/buttonPowrot"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonZarejestrujRegistry"
        android:gravity="center"
        android:textColor="#000000"
        android:onClick="buttonPowrotOnClick"
        />

</RelativeLayout>