<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_activity_buttons"
        android:text="@string/buttonSport"
        android:textSize="30sp"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:onClick="buttonSportOnClick"
        />
    <Button
        android:id="@+id/buttonWyloguj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/main_activity_buttons"
        android:text="@string/buttonMuzyka"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:layout_below="@+id/buttonStart"
        android:onClick="buttonMuzykaOnClick"
        />

</RelativeLayout>